Colab kullanılarak oluşturuldu

--- a/Recommender_TOP_N_Movie_Using_Surprise.ipynb
+++ b/Recommender_TOP_N_Movie_Using_Surprise.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNDfbNTc5uQIhRj8w/7ENQ7",
+      "authorship_tag": "ABX9TyNCeXyQd46ZlMlH+WTpQDek",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -242,7 +242,7 @@
         "    predictions.sort(key=lambda x: x.est, reverse=True)\n",
         "    top_predictions = predictions[:top_n]\n",
         "    # Film isimlerini kullanarak öneriler oluştur\n",
-        "    return [(movie_dict[int(pred.iid)], pred.est) for pred in top_predictions]\n",
+        "    return [(movie_dict[int(pred.iid)], int(pred.est)) for pred in top_predictions]\n",
         "\n",
         "# Her algoritma için film önerileri\n",
         "print(\"SVD Algoritmasına Göre Öneriler:\")\n",
@@ -262,25 +262,25 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Bn48jeAUGVgw",
-        "outputId": "0ccb63c9-1326-450b-ebbf-8f2f15d335f0"
+        "outputId": "eba2d166-e94e-4db7-8053-d78ffe364582"
       },
-      "execution_count": 15,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "SVD Algoritmasına Göre Öneriler:\n",
-            "[('Kolya (1996)', 4.105689715210568), ('Boogie Nights (1997)', 4.003106639113343), ('Mrs. Brown (Her Majesty, Mrs. Brown) (1997)', 3.98265604455645), ('Raising Arizona (1987)', 3.921370291639603), ('Groundhog Day (1993)', 3.8591564513879684)]\n",
+            "[('Kolya (1996)', 4), ('Boogie Nights (1997)', 4), ('Mrs. Brown (Her Majesty, Mrs. Brown) (1997)', 3), ('Raising Arizona (1987)', 3), ('Groundhog Day (1993)', 3)]\n",
             "\n",
             "SVD++ Algoritmasına Göre Öneriler:\n",
-            "[('Mrs. Brown (Her Majesty, Mrs. Brown) (1997)', 4.255964891812107), ('Kolya (1996)', 4.163588377660774), ('Raising Arizona (1987)', 3.9704035852764727), ('Mighty Aphrodite (1995)', 3.6923498468590483), ('Boogie Nights (1997)', 3.6417198636792607)]\n",
+            "[('Mrs. Brown (Her Majesty, Mrs. Brown) (1997)', 4), ('Kolya (1996)', 4), ('Raising Arizona (1987)', 3), ('Mighty Aphrodite (1995)', 3), ('Boogie Nights (1997)', 3)]\n",
             "\n",
             "NMF Algoritmasına Göre Öneriler:\n",
-            "[('Boogie Nights (1997)', 5), ('Mrs. Brown (Her Majesty, Mrs. Brown) (1997)', 4.542564746376569), ('Kolya (1996)', 4.508696878795947), ('Raising Arizona (1987)', 4.395563112445967), ('Van, The (1996)', 4.366060645983848)]\n",
+            "[('Boogie Nights (1997)', 5), ('Mrs. Brown (Her Majesty, Mrs. Brown) (1997)', 4), ('Kolya (1996)', 4), ('Raising Arizona (1987)', 4), ('Van, The (1996)', 4)]\n",
             "\n",
             "SlopeOne Algoritmasına Göre Öneriler:\n",
-            "[('Raising Arizona (1987)', 4.080328248427947), ('Mrs. Brown (Her Majesty, Mrs. Brown) (1997)', 4.076112413319115), ('Kolya (1996)', 4.045203109376537), ('Groundhog Day (1993)', 3.9348076080527474), ('Boogie Nights (1997)', 3.654979882296462)]\n"
+            "[('Raising Arizona (1987)', 4), ('Mrs. Brown (Her Majesty, Mrs. Brown) (1997)', 4), ('Kolya (1996)', 4), ('Groundhog Day (1993)', 3), ('Boogie Nights (1997)', 3)]\n"
           ]
         }
       ]
